--- a/style.css
+++ b/style.css
@@ -57,11 +57,6 @@ body {
     color: red;
 }
 
-.head p2 {
-    font-size: 25px;
-    color: white;
-}
-
 .truck {
     display: flex;
     align-items: center;
@@ -74,6 +69,7 @@ body {
     font-weight: bolder;
     font-size: 25px;
     border-radius: 10px;
+    margin-bottom: 3rem;
 
 }
 
@@ -91,7 +87,6 @@ body {
     padding: 5rem;
     justify-content: space-around;
     gap: 5rem;
-
 }
 
 .about img {
@@ -130,3 +125,51 @@ body {
     border-radius: 20px;
 }
 
+
+@media only screen and (max-width: 700px) {
+    .nav-list{
+        display: none;
+    }
+    .about{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .about p{
+        width: 350px;
+    }
+    .head {
+        text-align: center;
+        padding: 2rem;
+    }
+    
+    .head h1 {
+        font-size: 24px;
+        ;
+        color: yellow;
+    }
+    
+    .head p {
+        font-size: 12px;
+        color: red;
+    }
+    .img1 {
+        height: 110px;
+    }
+    .btn {
+        padding: 5px 24px;
+        font-weight: bold;
+        font-size: 15px;
+        border-radius: 10px;
+        margin-bottom: 3rem;
+    }
+    .img2{
+        height: 80px;
+    }
+    .truck {
+        flex-direction: column;
+    }
+    .about p{
+        font-size: 12px;
+    }
+  }
